fix: header spacing (#328)
* fix: header spacing

* fix: move margin to wrapper

--- a/components/common/Header/styles.module.css
+++ b/components/common/Header/styles.module.css
@@ -29,9 +29,14 @@
   height: 100%;
 }
 
+.chainSwitcher {
+  margin-right: var(--space-2);
+}
+
 @media (max-width: 768px) {
   .logo,
   .tokenWidget,
+  .notificationCenter,
   .chainSwitcher {
     display: none;
   }
